--- a/vars/nginx.yml
+++ b/vars/nginx.yml
@@ -1,6 +1,6 @@
 server_name: "{{ inventory_hostname }}"
-cert_file: /etc/nginx/ssl/centos-node2.cer
-key_file: /etc/nginx/ssl/centos-node2.key
+cert_file: /etc/nginx/ssl/random.cer
+key_file: /etc/nginx/ssl/random.key
 config_file: /etc/nginx/nginx.conf
 ssl_config_file: /etc/nginx/conf.d/ssl.conf
 workers_number: "{{ ansible_processor_vcpus }} * 2 + 1"
