--- a/add-mariadbrepo.yml
+++ b/add-mariadbrepo.yml
@@ -1,6 +1,7 @@
+---
 - name: Add MariaDB Repo
   hosts: centos-node2.random.com
-  become: True
+  become: true
   become_user: root
   tasks:
     - name: Install MariaDB Repository
@@ -9,5 +10,5 @@
         description: MariaDB Repository
         baseurl: http://yum.mariadb.org/10.2/centos7-amd64
         gpgkey: https://yum.mariadb.org/RPM-GPG-KEY-MariaDB
-        gpgcheck: yes
+        gpgcheck: true
         includepkgs: MariaDB*
