--- a/mariadb.yml
+++ b/mariadb.yml
@@ -1,7 +1,8 @@
+---
 - name: Install MariaDB 10.2 server
   hosts: centos-node2.random.com
   order: sorted
-  become: True
+  become: true
   become_user: root
   tasks:
     - name: Install MariaDB Repository
@@ -10,7 +11,7 @@
         description: MariaDB Repository
         baseurl: http://yum.mariadb.org/10.2/centos7-amd64
         gpgkey: https://yum.mariadb.org/RPM-GPG-KEY-MariaDB
-        gpgcheck: yes
+        gpgcheck: true
         includepkgs: MariaDB*
     - name: Install mariadb server
       yum:
