--- a/nginx.yml
+++ b/nginx.yml
@@ -1,12 +1,12 @@
 ---
 - hosts: centos-node2.random.com
-  become: True
+  become: true
   become_user: root
   vars_files:
     - vars/nginx.yml
   vars:
-   tls_enabled: True
-   php_enabled: False
+   tls_enabled: true
+   php_enabled: false
 #
 # Main Tasks list
 #
